<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    style="@style/Text.Body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/bottomMenu"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/bottomMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/fl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/button1"
                        style="@style/BottomMenuTextStyle"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:text="@string/menu_news"
                        app:drawableTopCompat="@drawable/ic_news" />
                </FrameLayout>

                <TextView
                    android:id="@+id/button2"
                    style="@style/BottomMenuTextStyle"
                    android:text="@string/menu_profile"
                    app:drawableTopCompat="@drawable/ic_profile" />

                <TextView
                    android:id="@+id/button3"
                    style="@style/BottomMenuTextStyle"
                    android:layout_width="32dp"
                    android:lines="1"
                    android:text="@string/menu_prize"
                    android:textSize="@dimen/text_size_small"
                    app:drawableTopCompat="@drawable/ic_prize" />

                <TextView
                    android:id="@+id/button4"
                    style="@style/BottomMenuTextStyle"

                    android:text="@string/menu_materials"
                    app:drawableTopCompat="@drawable/ic_materials" />

                <TextView
                    android:id="@+id/button5"
                    style="@style/BottomMenuTextStyle"
                    android:text="@string/menu_more"
                    app:drawableTopCompat="@drawable/ic_more" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/menuShadow"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_above="@id/menuDivider"
            android:background="@drawable/above_shadow" />

        <View
            android:id="@+id/menuDivider"
            style="@style/HorizontalDivider"
            android:layout_above="@id/bottomMenu" />

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-6dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:mpb_indeterminateTint="@color/orange"
            app:mpb_progressStyle="horizontal"
            app:mpb_showProgressBackground="false" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

